[project]
name = "my-llm-project"
version = "0.1.0"
description = ""
authors = [
    {name = "elilourens",email = "elilourens123@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "langgraph (>=0.5.3,<0.6.0)",
    "langchain-ollama (>=0.3.5,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
